--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -49,7 +49,8 @@ body {
      color: #000;
      font-size: 12px;
      line-height: 1.4;
-     font-family: Helvetica, Arial, sans-serif;
+     font-family: 'Open Sans', sans-serif;
+
 }
 
 
@@ -58,53 +59,140 @@ body {
 /*******************************************/
 
 /* Center the container */
-header h1 {
-  color: white;
-  font-weight: 900;
-  font-size: 300%;
-  margin: 0px 100px;
+#container{ 
+  width: 100%;
+  margin: auto;
+  height: 500px;
 }
 
-header h2 {
-  margin: 200px 0px 200px 0px;
+header  {
   text-align: center;
   color: white;
+  background: url("../images/header_bg.jpg") no-repeat center top rgb(134,141,157);
+  background-size: cover;
+  text-align: center;
+  margin: auto;
+  height: 400px;
+
+}
+
+p{
+  font-size: 14px;
+  color: grey;
+}
+
+ul{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  color: grey;
+}
+
+#Relaxr {
+  margin-right: 500px;
+}
+
+#companyName {
+  font-weight: 800;
+  font-size: 24px;
+  text-align: left;
+  margin: 0 10px 10px 50px;
+  padding-top: 15px;
+}
+
+#tagLine {
+  font-weight: 500;
+  font-size: 30px;
+  margin: 70px 20px 20px 20px;
+}
+
+#getItButton {
+  color: #033048;
+  background-color: #f9e42e;
+  font-size: 17px;
+  border-radius: 5px;
+  width: 150px;
+  height: 35px;
+  margin: 25px;
   font-weight: 700;
-  font-size: 24px;
+}
 
+.benefits {
+  padding: 20px 30px;
+  margin: 20px 0 40px 0;
+}
 
+#benefitHeadline {
+  font-weight: 600;
+  font-size: 20px;
+  text-align: left;
+  padding: 5px -5px 5px 5px;
+}
+
+.benefitsList {
+  list-style: disc;
+  margin: 10px 45px;
+}
+
+.testimonial {
+  background: url(../images/testimonial_bg.jpg);
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  height: 
+  200px;
+}
+
+#testimonialQuote {
+  font-weight: 300;
+  font-style: italic;
+  width: 200px;
+  text-align: center;
+  margin: 0 0 0 270px;
+  font-size: 16px;
+  padding-top: 20px;
 
 }
 
-#button1 {
-  display: block;
-  margin: 0 auto;
-  border: none;
-  border-radius: 3px;
-  background: yellow;
-  font-weight: bolder 900;
-  font-size: 24px;
+#quoteAuthor {
+  font-weight: 600;
 }
 
-header {
-  background: url(../images/header_bg.jpg) no-repeat center  rgb(134,141,157);
-  
+#signUp {
+  background-color: #f9e42e;
+  height: 80px;
 }
 
+#sign {
+  position: absolute;
+  right: 300px;
+  top: 940px;
+  background-color: #050E21;
+  color: white;
+  width: 126px;
+  height: 39px;
 
-
-main {
-  background-color: #f0efef;
 }
 
 footer {
-
+    background-color: #121212;
 }
 
-/******************************************
-/* ADDITIONAL STYLES
-/*******************************************/
+#facebook {
+  position: absolute;
+  right: 320px;
+}
 
+#twitter {
+  padding-left: 330px;
+}
 
+#copy {
+  padding-left: 320px;
+}
 
+footer h2 {
+  color: #f9e42e;
+  padding-left: 330px;
+  margin-top: 0px;
+}
 
