--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -46,9 +46,7 @@ Developer @GA in NYC
 /*******************************************/
 
 body {
-     color: #000;
-     font-size: 12px;
-     line-height: 1.4;
+     
      font-family: 'Open Sans', sans-serif;
 
 }
@@ -59,11 +57,7 @@ body {
 /*******************************************/
 
 /* Center the container */
-#container{ 
-  width: 100%;
-  margin: auto;
-  height: 500px;
-}
+
 
 header  {
   text-align: center;
@@ -82,9 +76,20 @@ p{
 }
 
 ul{
-  font-family: 'Open Sans', sans-serif;
+  
   font-size: 14px;
   color: grey;
+}
+
+footer {
+    background-color: #121212;
+}
+
+
+footer h2 {
+  color: #f9e42e;
+  padding-left: 330px;
+  margin-top: 0px;
 }
 
 #Relaxr {
@@ -105,7 +110,7 @@ ul{
   margin: 70px 20px 20px 20px;
 }
 
-#getItButton {
+#getItNow {
   color: #033048;
   background-color: #f9e42e;
   font-size: 17px;
@@ -153,7 +158,7 @@ ul{
 
 }
 
-#quoteAuthor {
+#quoteName {
   font-weight: 600;
 }
 
@@ -173,9 +178,7 @@ ul{
 
 }
 
-footer {
-    background-color: #121212;
-}
+
 
 #facebook {
   position: absolute;
@@ -190,9 +193,4 @@ footer {
   padding-left: 320px;
 }
 
-footer h2 {
-  color: #f9e42e;
-  padding-left: 330px;
-  margin-top: 0px;
-}
 
